fix: homepage cover image z-index issue

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -49,6 +49,7 @@
     bottom: 10px;
     right: 0px;
     width: 350px;
+    z-index: 1;
 
     // Hide svg background on screen < 900px;
     @include tabletL {
